# backend

./: .gitignore  .gitmodules  .gitpod.yml  Cargo.toml  README.md  api_service.Dockerfile  api_service.deployment.yaml  api_service.deployment.yml  game_service.Dockerfile  game_service.deployment.yaml  game_service.deployment.yml
.github/workflows/: dev-ci.yml  prod-ci.yml
api_service/: Cargo.toml
api_service/src/: environment.rs  main.rs  search_client.rs
api_service/src/mongo/: custom_black_card_collection.rs  custom_cardpack_collection.rs  custom_white_card_collection.rs  helper.rs  mod.rs  user_collection.rs
api_service/src/proto_helper/: mod.rs  page_token.rs
api_service/src/service/: admin_service_impl.rs  cardpack_service_impl.rs  helper.rs  mod.rs  profile_image_handler.rs  user_service_impl.rs
api_service/src/service/default_cardpacks/: hardcoded_data.rs  lib.rs  mod.rs
game_service/: Cargo.toml
game_service/src/: amqp.rs  environment.rs  helper.rs  main.rs  test.rs
game_service/src/game/: black_card_deck.rs  chat_message_handler.rs  game.rs  game_indexer.rs  mod.rs  player_id.rs  player_manager.rs  text_query_handler.rs  white_card_deck.rs  white_card_gameplay_manager.rs
game_service/src/service/: api_resource_fetcher.rs  game_service_impl.rs  mod.rs
shared/: Cargo.toml  build.rs
shared/src/: basic_validation.rs  constants.rs  grpc_error.rs  lib.rs  proto_validation.rs  resource_name.rs  test.rs  test_helper.rs  time.rs
shared/src/proto/: mod.rs
