[package]
name = "api_service"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
edition = "2018"

[dependencies]
bson = { version = "2.0.1", features = ["chrono-0_4"] }
dashmap = "4.0.2"
futures-lite = "1.11.3"
hex = "0.4.3"
mockall = "0.9.1"
mongodb = { version = "2.0.2", default-features = false, features = ["async-std-runtime"] } # TODO - Remove default-features and features, which will revert from async-std runtime to tokio. We need this right now because the current version of this dependency (at least at time of writing) is running on tokio 0.2.
prost = "0.9.0"
prost-types = "0.9.0"
shared = { path = "../shared" }
sha2 = "0.9.3"
sonic-channel = { version = "0.4.0", features = ["search", "ingest", "control"] }
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"
tonic = "0.6.1"