[package]
name = "api_service"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
edition = "2018"

[dependencies]
bson = { version = "2.0.1", features = ["chrono-0_4"] }
dashmap = "4.0.2"
futures-lite = "1.12.0"
hex = "0.4.3"
mockall = "0.10.2"
mongodb = "2.0.2"
prost = "0.9.0"
prost-types = "0.9.0"
shared = { path = "../shared" }
sha2 = "0.9.8"
sonic-channel = { version = "0.4.1", features = ["search", "ingest", "control"] }
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.8"
tonic = "0.6.1"