[package]
name = "api_service"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
edition = "2018"

[dependencies]
bson = { version = "2.1.0", features = ["chrono-0_4"] }
dashmap = "5.2.0"
futures-lite = "1.12.0"
hex = "0.4.3"
mockall = "0.11.0"
mongodb = "2.1.0"
prost = "0.10.0"
prost-types = "0.10.0"
shared = { path = "../shared" }
sha2 = "0.10.2"
sonic-channel = { version = "0.6.0", features = ["search", "ingest", "control"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.8"
tonic = "0.7.1"