[package]
name = "game_service"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
clokwerk = "0.3.5"
lapin = { version = "1.8.1", default-features = false, features = ["rustls"] }
mockall = "0.10.2"
rand = "0.8.4"
rand_chacha = "0.3.1"
shared = { path = "../shared" }
sha2 = "0.9.8"
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
tonic = "0.6.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }