[package]
name = "shared"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
edition = "2018"

# TODO - Find a way to remove this. We need it because otherwise, the comments in prost generated wellknown types are misinterpreted as failing doc-tests.
[lib]
doctest = false

[dependencies]
bson = { version = "2.1.0", features = ["chrono-0_4"] }
chrono = "0.4.19"
prost = "0.10.0"
tonic = "0.7.1"

[build-dependencies]
tonic-build = "0.7.0"